--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,11 @@
 name: Check ECR Tag Exist
+inputs:
+  ecr_repo_name:
+    default: ""
 runs:
   using: "composite"
   steps:
     - run: echo "checking ecr tag..."
+      shell: bash
+    - run: echo $(aws ecr list-images --repository-name ${{ inputs.ecr_repo_name }} | (jq '.imageIds'))
       shell: bash
