--- a/action.yml
+++ b/action.yml
@@ -12,10 +12,10 @@ runs:
     - shell: bash
       run: echo "checking ecr tag..."
     - shell: bash
-      if: ${{ inputs.exist }} == "yes"
+      if: ${{ inputs.exist }} == yes
       run: |
         echo "input exist is yes"
     - shell: bash
-      if: ${{ inputs.exist }} == "no"
+      if: ${{ inputs.exist }} == no
       run: |
         echo "input exist is no"
