--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,9 @@ runs:
       if: ${{ inputs.exist }} == yes
       run: |
         echo "input exist is yes"
+        echo ${{ inputs.exist }}
     - shell: bash
       if: ${{ inputs.exist }} == no
       run: |
         echo "input exist is no"
+        echo ${{ inputs.exist }}
